convert ValueWithTs to a record & replace usages of Collections.singletonList to List.of & use single key search for async method